Update Dockerfile to install git and adjust user permissions; add application overview documentation

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,5 +1,16 @@
-# Use the official Python image from the Docker Hub
 FROM python:3.9-slim
 
+# Add the vscode user
 RUN useradd -ms /bin/bash vscode
+
+# Switch to the root user to install git
+USER root
+
+# Install git
+RUN apt-get update && apt-get install -y git
+
+# Switch back to the vscode user
 USER vscode
+
+# Set the working directory
+WORKDIR /home/vscode
